<resources>
    <string name="app_name">M-Expense</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home</string>
    <string name="new_expense_fragment_label">New Expense</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="welcome">Hello Edward,</string>
    <string name="welcomeDescription">Welcome back to M-Expense.</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="destination">Destination</string>
    <string name="destination_">DESTINATION</string>
    <string name="trip_name">Trip name</string>
    <string name="trip_name_">TRIP NAME</string>
</resources>